--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -90,6 +90,7 @@
   "active": "6288cbface7fbe72",
   "lastOpenFiles": [
     "Čjl/Literatura/Bedřich Bridel.md",
+    "README.md",
     "hardWare/graphicCard.md",
     "hardWare/DVD.md",
     "ToDo.md",
@@ -97,7 +98,6 @@
     "Elektrotechnika/AirConditioner.md",
     "Fyzika/Keplerovy zákony.md",
     "Fyzika/gravity.md",
-    "Fyzika/mechanickaPrace.md",
-    "Debílci/chakretardi.md"
+    "Fyzika/mechanickaPrace.md"
   ]
 }
