--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "English/Formal Email.md",
+            "file": "hardWare/UPS.md",
             "mode": "source",
             "source": true
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "English/Formal Email.md",
+                "file": "hardWare/UPS.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "6288cbface7fbe72",
   "lastOpenFiles": [
-    "English/Formal Email.md",
+    "hardWare/UPS.md",
     "English/story.md",
+    "English/Formal Email.md",
     "Čjl/Literatura/Bedřich Bridel.md",
     "README.md",
     "hardWare/graphicCard.md",
     "hardWare/DVD.md",
     "ToDo.md",
     "Elektrotechnika/AirConditioner.md",
-    "Fyzika/Keplerovy zákony.md",
-    "Fyzika/gravity.md"
+    "Fyzika/Keplerovy zákony.md"
   ]
 }
