--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Matematika/quadRovnice.md",
+            "file": "Čjl/Literatura/ReadersNotes.md",
             "mode": "source",
             "source": true
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Matematika/quadRovnice.md",
+                "file": "Čjl/Literatura/ReadersNotes.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "6288cbface7fbe72",
   "lastOpenFiles": [
-    "Matematika/quadRovnice.md",
-    "Fyzika/gravity.md",
-    "Čjl/Literatura/barokní Literatura.md",
-    "English/story.md",
-    "hardWare/UPS.md",
-    "Čjl/Literatura/otazkyCestinaHusitstvi.md",
-    "networking/networkLayer.md",
-    "Čjl/Literatura/humanismus a renesance.md",
+    "Čjl/Literatura/ReadersNotes.md",
+    "Fyzika/Liquids.md",
+    "ToDo.md",
     "README.md",
-    "English/Formal Email.md"
+    "Fyzika/Keplerovy zákony.md",
+    "Fyzika/mechanickaPrace.md",
+    "Fyzika/gravity.md",
+    "English/story.md",
+    "English/Formal Email.md",
+    "Matematika/quadRovnice.md"
   ]
 }
