--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,9 +9,9 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Fyzika/archimedesLaws.md",
+            "file": "Čjl/Literatura/Preromantismus.md",
             "mode": "source",
-            "source": false
+            "source": true
           }
         }
       }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Fyzika/archimedesLaws.md",
+                "file": "Čjl/Literatura/Preromantismus.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,7 @@
   },
   "active": "6288cbface7fbe72",
   "lastOpenFiles": [
+    "Fyzika/archimedesLaws.md",
     "Čjl/Literatura/Preromantismus.md",
     "Čjl/Literatura/ReadersNotes.md",
     "Čjl/Literatura/otazkyCestinaHusitstvi.md",
@@ -97,7 +98,6 @@
     "Čjl/Literatura/Bedřich Bridel.md",
     "Čjl/Literatura/barokní Literatura.md",
     "Datan Analisis in R/Trump case sutdy.md",
-    "hardWare/graphicCard.md",
-    "hardWare/soundCard.md"
+    "hardWare/graphicCard.md"
   ]
 }
